# DOpus-Scripting-Extensions

./: .gitignore  CMakeLists.txt  CMakeSettings.json  DOpusScriptingExtensions.sln  README.md  build.ps1  vcpkg.json
.github/workflows/: main.yaml
src/: Directory.Build.props
src/DOpusScriptingExtensions/: DOpusScriptingExtensions.cpp  DOpusScriptingExtensions.idl  DOpusScriptingExtensions.rc  DOpusScriptingExtensions.vcxproj  DOpusScriptingExtensions.vcxproj.filters  Resource.h  pch.h
src/DOpusScriptingExtensions/ExifTool/: ExifTool.h  ExifTool.rgs  ExifToolCommandArgsGenerator.h  ExifToolWrapper.h
src/DOpusScriptingExtensions/FileMimeTypeDetector/: FileMimeTypeDetector.h  FileMimeTypeDetector.rgs  FileMimeTypeDetectorResult.h  LibMagicWrapper.h
src/DOpusScriptingExtensions/MediaInfoRetriever/: MediaInfoRetriever.h  MediaInfoRetriever.rgs
src/DOpusScriptingExtensions/ProcessRunner/: ProcessRunner.h  ProcessRunner.rgs  ProcessRunnerResult.h
src/DOpusScriptingExtensions/StringFormatter/: StringFormatter.h  StringFormatter.rgs
src/DOpusScriptingExtensions/TrId2FileTypeDetector/: TrId2FileTypeDetector.h  TrId2FileTypeDetector.rgs  TrId2TypeInformation.h
src/DOpusScriptingExtensions/UCharDet/: UCharDet.h  UCharDet.rgs  UCharDetWrapper.h
src/DOpusScriptingExtensions/Utils/: ComUtils.h  Exceptions.h  NonCopyableAndNonMovable.h  StringUtils.h  WinApiUtils.h
src/Installer/: Installer.wixproj  Package.wxs
src/ProcessHandlesService/: DOpusScriptingExtensions.ProcessHandlesService.vcxproj  DOpusScriptingExtensions.ProcessHandlesService.vcxproj.filters  DevicePathToDrivePathConverter.h  LockedFilesProvider.h  NtDll.h  ProcExp152Driver.h  ProcessHandlesProvider.h  ProcessHandlesService.proto  ProcessHandlesServiceGrpcImpl.h  ProcessHandlesServiceGrpcServer.h  main.cpp  pch.h
src/ProcessHandlesService/Utils/: DevicePathToDrivePathConverter.h
src/Shared/: DownloadDependencies.ps1  ProcessHandlesService.proto  Shared.vcxproj  Shared.vcxproj.filters
src/Shared/Utils/: Exceptions.h  Logger.h  WinApiUtils.h
src/Test/: processRunnerPerformanceTest.js  test.js
src/UnitTest/: LockedFilesProviderTest.cpp  UnitTest.vcxproj  UnitTest.vcxproj.filters  pch.h
vcpkg/overlay_ports/boost-asio/: increase_pipe_buffer.diff  portfile.cmake
vcpkg_overlay_ports/boost-asio/: portfile.cmake
vcpkg_overlay_ports/libmagic/: portfile.cmake  vcpkg.json
